--- a/Steam(wpf)/Steam(wpf).csproj
+++ b/Steam(wpf)/Steam(wpf).csproj
@@ -71,6 +71,7 @@
     <Compile Include="developersForGame.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="frameClass.cs" />
     <Compile Include="games.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -85,6 +86,12 @@
     </Compile>
     <Compile Include="languagesForGame.cs">
       <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
+    <Compile Include="libraryPage.xaml.cs">
+      <DependentUpon>libraryPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="listOfUsers.xaml.cs">
+      <DependentUpon>listOfUsers.xaml</DependentUpon>
     </Compile>
     <Compile Include="main.xaml.cs">
       <DependentUpon>main.xaml</DependentUpon>
@@ -106,6 +113,9 @@
     <Compile Include="reviews.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="storePage.xaml.cs">
+      <DependentUpon>storePage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="tags.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -118,6 +128,14 @@
     <Compile Include="users.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Page Include="libraryPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="listOfUsers.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="main.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -135,6 +153,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="registrationWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="storePage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
