list of games upgrade

--- a/Steam(wpf)/Steam(wpf).csproj
+++ b/Steam(wpf)/Steam(wpf).csproj
@@ -90,9 +90,6 @@
     <Compile Include="libraryPage.xaml.cs">
       <DependentUpon>libraryPage.xaml</DependentUpon>
     </Compile>
-    <Compile Include="listOfGames.xaml.cs">
-      <DependentUpon>listOfGames.xaml</DependentUpon>
-    </Compile>
     <Compile Include="listOfGamesUpdated.xaml.cs">
       <DependentUpon>listOfGamesUpdated.xaml</DependentUpon>
     </Compile>
@@ -117,6 +114,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Model1.edmx</DependentUpon>
     </Compile>
+    <Compile Include="partialClass.cs" />
     <Compile Include="profilePage.xaml.cs">
       <DependentUpon>profilePage.xaml</DependentUpon>
     </Compile>
@@ -151,10 +149,6 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Page Include="libraryPage.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="listOfGames.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
