--- a/Steam(wpf)/Steam(wpf).csproj
+++ b/Steam(wpf)/Steam(wpf).csproj
@@ -44,6 +44,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
     <Reference Include="System.Xml" />
@@ -65,6 +66,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="class\DBHelper.cs" />
+    <Compile Include="class\gamePresenterFrame.cs" />
     <Compile Include="developers.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
@@ -90,6 +92,9 @@
     <Compile Include="page\gameEdit.xaml.cs">
       <DependentUpon>gameEdit.xaml</DependentUpon>
     </Compile>
+    <Compile Include="page\gameInStore.xaml.cs">
+      <DependentUpon>gameInStore.xaml</DependentUpon>
+    </Compile>
     <Compile Include="page\libraryPage.xaml.cs">
       <DependentUpon>libraryPage.xaml</DependentUpon>
     </Compile>
@@ -98,6 +103,12 @@
     </Compile>
     <Compile Include="page\listOfUsers.xaml.cs">
       <DependentUpon>listOfUsers.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="page\rightFrameOfLibrary.xaml.cs">
+      <DependentUpon>rightFrameOfLibrary.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="page\updateUser.xaml.cs">
+      <DependentUpon>updateUser.xaml</DependentUpon>
     </Compile>
     <Compile Include="widnow\main.xaml.cs">
       <DependentUpon>main.xaml</DependentUpon>
@@ -158,6 +169,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="page\gameInStore.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="page\libraryPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -167,6 +182,14 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="page\listOfUsers.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="page\rightFrameOfLibrary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="page\updateUser.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -254,6 +277,12 @@
       <DependentUpon>Model1.edmx</DependentUpon>
       <LastGenOutput>Model1.cs</LastGenOutput>
     </Content>
+    <Resource Include="Resources\empty.jpg" />
+    <Resource Include="Resources\apb_reloaded.jpg" />
+    <Resource Include="Resources\grand_theft_auto_v.jpg" />
+    <Resource Include="Resources\pubg.jpg" />
+    <Resource Include="Resources\rocket_league.jpg" />
+    <Resource Include="Resources\sea_of_thieves.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
