--- a/Steam(wpf)/Steam(wpf).csproj
+++ b/Steam(wpf)/Steam(wpf).csproj
@@ -110,6 +110,9 @@
     <Compile Include="page\updateUser.xaml.cs">
       <DependentUpon>updateUser.xaml</DependentUpon>
     </Compile>
+    <Compile Include="userGalery.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="widnow\main.xaml.cs">
       <DependentUpon>main.xaml</DependentUpon>
     </Compile>
@@ -164,6 +167,9 @@
     </Compile>
     <Compile Include="widnow\settingsWindow.xaml.cs">
       <DependentUpon>settingsWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="widnow\userGaleryWindow.xaml.cs">
+      <DependentUpon>userGaleryWindow.xaml</DependentUpon>
     </Compile>
     <Page Include="page\gameEdit.xaml">
       <SubType>Designer</SubType>
@@ -222,6 +228,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="widnow\settingsWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="widnow\userGaleryWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
